--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -74,3 +74,9 @@ title = {Solving the Enigma: History of the Cryptanalytic Bombe},
 year = {2006},
 school = {National Security Agency:Center for Cryptologic History}
 }
+
+@Article{aes-proposal,
+author = {Joan Daemen and Vincent Rijmen},
+title = {AES Proposal: Rijndael},
+year = {1998}
+}
